--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
+  cloud_firestore: ^3.4.6
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
